challenge session 18 - some corrections